@@ -4,10 +4,11 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
-import java.util.Collections;
+import java.util.List;
 
 @Getter
 @NoArgsConstructor
@@ -15,10 +16,11 @@ import java.util.Collections;
 public class UserDetailsImpl implements UserDetails {
 
     private Long memberId;
+    private String memberEnum;
 
     @Override // 인가를 해주는 부분
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList();
+        return List.of(new SimpleGrantedAuthority(memberEnum));
     }
 
     public Long getMemberId() {
